--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h2>AMIT KUMAR BOITAI</h2>
+                    <h1>AMIT BOITAI</h1>
                     <h2>BTech CSE Student</h2>
                     <div class="reg-number">Registration No: 2401104067</div>
                     <p>I'm a 3rd semester Computer Science Engineering student at Government College of Engineering, Keonjhar. Passionate about web development and creating innovative solutions.</p>
